--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.2",
+    "heroicons": "^2.0.12",
     "material-ui-popup-state": "^4.1.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
